<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/dashboard"
        android:title="@string/dashboard"/>
    <item
        android:id="@+id/navigation_loan"
        android:icon="@drawable/loans_icon"
        android:title="@string/loans" />
    <item
        android:id="@+id/navigation_service"
        android:icon="@drawable/services"
        android:title="@string/services" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/accounts" />
    <item
        android:id="@+id/navigation_statement"
        android:icon="@drawable/statements"
        android:title="@string/statements" />

</menu>
