<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_51dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_35dp"
                android:layout_marginTop="@dimen/_80dp"
                android:layout_marginEnd="@dimen/_35dp"
                app:srcCompat="@mipmap/splash_logo" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_60dp"
                android:textSize="@dimen/_22sp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_below="@id/iv_login_logo"
                android:textColor="@color/black"
                android:text="@string/login"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_username"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:hint="@string/username_email"
                    android:layout_below="@+id/tv_login"
                    android:layout_marginTop="@dimen/_20dp"
                    style="@style/OutlineStyle"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    app:endIconMode="clear_text"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textAutoComplete"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/cursor"
                         />
                </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_pass"
                android:layout_below="@id/tl_username"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/_10dp"
                style="@style/OutlineStyle"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                app:endIconMode="clear_text"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tl_pass"
                android:layout_marginStart="@dimen/_20dp"
                android:theme="@style/ButtonTheme"
                android:layout_marginTop="@dimen/_50dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:background="@drawable/btn_normal_bg"
                android:text="@string/continu"
                android:textAllCaps="true"
                android:clickable="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20dp"
                android:textSize="@dimen/_12sp"
                android:textColor="@color/hintColor"
                android:layout_below="@id/btn_login_continue"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_60dp"/>
            <TextView
                android:id="@+id/tv_reset_pass"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20dp"
                android:textSize="@dimen/_12sp"
                android:textColor="@color/black"
                android:layout_below="@id/btn_login_continue"
                android:text="@string/reset_password"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:layout_toEndOf="@id/tv_forget_pass"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginEnd="@dimen/_70dp"/>
            <TextView
                android:id="@+id/tv_no_account"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="@color/black"
                android:text="@string/don_t_have_an_account"
                android:layout_below="@+id/tv_forget_pass"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_100dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_ac"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/create_account"
                android:layout_marginStart="@dimen/_35dp"
                android:textSize="12sp"
                android:layout_marginTop="40dp"
                android:theme="@style/ButtonTheme"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_no_account"
                android:background="@drawable/btn_bg_colored"
                android:textColor="@color/white"
                android:textAllCaps="false"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_learn_more"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/learn_more"
                android:layout_marginEnd="@dimen/_35dp"
                android:theme="@style/ButtonTheme"
                android:textSize="12sp"
                android:layout_marginTop="42dp"
                android:layout_below="@id/tv_no_account"
                android:layout_alignParentEnd="true"
                android:background="@drawable/btn_bg_transparent"
                android:textColor="@color/textColor"
                android:textAllCaps="false"
                />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</layout>