<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.auth.onboarding.OnBoardingFragment">
        <RelativeLayout
            android:id="@+id/ll_Logo"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="60dp">
            <ImageView
                android:layout_width="47dp"
                android:layout_marginStart="@dimen/_25dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/app_logo"/>
            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="50dp"
                android:layout_height="31dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/_15dp"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:text="@string/skip"/>
        </RelativeLayout>
        

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_below="@id/ll_Logo"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            />
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabDots"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_below="@id/pager"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:backgroundTintMode="screen"
            android:layout_marginTop="@dimen/_10dp"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"/>
        <TextView
            android:id="@+id/tv_slider_descr"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_88dp"
            android:fontFamily="@font/poppins"
            android:layout_below="@id/tabDots"
            android:layout_marginTop="@dimen/_5dp"
            android:gravity="center"
            android:maxLines="4"
            android:minLines="2"
            android:layout_marginStart="@dimen/_21dp"
            android:layout_marginEnd="@dimen/_21dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/intro_screen_description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />
       <RelativeLayout
           android:layout_below="@id/tv_slider_descr"
           android:id="@+id/rl_btns"
           android:layout_alignParentBottom="true"
           android:layout_width="match_parent"
           android:layout_marginTop="40dp"
           android:layout_height="61dp">
           <com.google.android.material.button.MaterialButton
               android:theme="@style/ButtonTheme"
               android:layout_width="138dp"
               android:layout_height="40dp"
               android:text="@string/create_account"
               android:layout_marginStart="@dimen/_35dp"
               android:textSize="12sp"
               android:layout_marginTop="40dp"
               android:layout_alignParentStart="true"
               android:background="@drawable/btn_bg_colored"
               android:textColor="@color/white"
               android:textAllCaps="false"
               />
           <com.google.android.material.button.MaterialButton
               android:theme="@style/ButtonTheme"
               android:layout_width="wrap_content"
               android:layout_height="36dp"
               android:text="@string/learn_more"
               android:layout_marginEnd="@dimen/_30dp"
               android:textSize="12sp"
               android:layout_marginTop="42dp"
               android:layout_alignParentEnd="true"
               android:background="@drawable/btn_bg_transparent"
               android:textColor="@color/textColor"
               android:textAllCaps="false"
               />


       </RelativeLayout>

    </RelativeLayout>
</layout>